trying to fix the overflow

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -69,6 +69,7 @@ hr {
 
  .navbar-link {
    color: #222;
+   float: right;
  }
 
  .navbar-brand {
